added travis deploy config

--- a/.travis.yml
+++ b/.travis.yml
@@ -8,3 +8,17 @@ before_install:
 
 script:
   - docker run -e CI=true wailuen/docker-dev-flow npm run test
+
+deploy:
+  provider: elasticbeanstalk
+  region: "ap-southeast-1"
+  app: "docker-dev-flow"
+  env: "DockerDevFlow-env"
+  bucket_name: "elasticbeanstalk-ap-southeast-1-501738230246"
+  bucket_path: "docker-dev-flow"
+  on:
+    branch: master
+  access_key_id:
+    secure: $AWS_ACCESS_KEY
+  secret_access_key:
+    secure: "$AWS_SECRET_KEY"
